[gd_scene load_steps=9 format=4 uid="uid://cr1ens3cyawud"]

[ext_resource type="Script" uid="uid://dtwk3j77gh5il" path="res://Script/try_again.gd" id="1_bfnoo"]
[ext_resource type="Texture2D" uid="uid://cw4x57rxmjpgi" path="res://Assets/Kenney Ui/Vector/Grey/button_rectangle_depth_border.svg" id="2_wshwd"]
[ext_resource type="FontFile" uid="uid://b5rm7pn7cdiwr" path="res://Assets/Font/Nexa-Heavy.ttf" id="3_qv434"]
[ext_resource type="FontFile" uid="uid://bdamp54gd063t" path="res://Assets/Font/Krabby Patty.ttf" id="4_gkrgk"]
[ext_resource type="Texture2D" uid="uid://b0sfq0mq55kc3" path="res://Assets/Kenney Ui/Vector/Grey/button_rectangle_depth_line.svg" id="5_gkrgk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qv434"]
bg_color = Color(0.854902, 0.862745, 0.905882, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.588235, 0.588235, 0.639216, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wshwd"]
texture = ExtResource("5_gkrgk")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0

[sub_resource type="TileSet" id="TileSet_5igi7"]
sources/0 = SubResource("TileSetAtlasSource_wshwd")

[node name="Control" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bfnoo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -203.0
offset_right = -155.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10.0205, 10.6851)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_qv434")

[node name="RestartButton" type="TextureButton" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 7.04641
offset_top = 7.01909
offset_right = 199.046
offset_bottom = 71.0191
scale = Vector2(0.129154, 0.0924125)
action_mode = 0
texture_normal = ExtResource("2_wshwd")

[node name="Restart" type="Label" parent="CanvasLayer/Panel/RestartButton"]
layout_mode = 0
offset_left = 59.6914
offset_top = 19.0195
offset_right = 1476.69
offset_bottom = 409.02
scale = Vector2(0.058059, 0.058059)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_qv434")
theme_override_font_sizes/font_size = 300
text = " ONTINUE"
horizontal_alignment = 1

[node name="Restart2" type="Label" parent="CanvasLayer/Panel/RestartButton"]
layout_mode = 0
offset_left = 35.0736
offset_top = 14.1781
offset_right = 1582.07
offset_bottom = 404.178
scale = Vector2(0.0789587, 0.0789587)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_qv434")
theme_override_font_sizes/font_size = 300
text = "C              "
horizontal_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 7.0855
offset_top = 15.8062
offset_right = 199.085
offset_bottom = 79.8062
scale = Vector2(0.129154, 0.0924125)
action_mode = 0
texture_normal = ExtResource("2_wshwd")

[node name="Restart" type="Label" parent="CanvasLayer/Panel/SettingsButton"]
layout_mode = 0
offset_left = 59.6914
offset_top = 19.0195
offset_right = 1476.69
offset_bottom = 409.02
scale = Vector2(0.058059, 0.058059)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_qv434")
theme_override_font_sizes/font_size = 300
text = " ETTINGS"
horizontal_alignment = 1

[node name="Restart2" type="Label" parent="CanvasLayer/Panel/SettingsButton"]
layout_mode = 0
offset_left = 35.0736
offset_top = 13.056
offset_right = 1582.07
offset_bottom = 403.056
scale = Vector2(0.0789587, 0.0789587)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_qv434")
theme_override_font_sizes/font_size = 300
text = "S              "
horizontal_alignment = 1

[node name="MainMenu" type="TextureButton" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 7.0855
offset_top = 25.4458
offset_right = 199.085
offset_bottom = 89.4458
scale = Vector2(0.129154, 0.0924125)
action_mode = 0
texture_normal = ExtResource("2_wshwd")

[node name="Restart" type="Label" parent="CanvasLayer/Panel/MainMenu"]
layout_mode = 0
offset_left = 55.5253
offset_top = 19.0195
offset_right = 1760.53
offset_bottom = 409.02
scale = Vector2(0.058059, 0.058059)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_qv434")
theme_override_font_sizes/font_size = 300
text = "  AIN MENU"
horizontal_alignment = 1

[node name="Restart2" type="Label" parent="CanvasLayer/Panel/MainMenu"]
layout_mode = 0
offset_left = 30.9075
offset_top = 13.056
offset_right = 1577.91
offset_bottom = 403.056
scale = Vector2(0.0789587, 0.0789587)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_qv434")
theme_override_font_sizes/font_size = 300
text = "M              "
horizontal_alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
visible = false
layout_mode = 0
offset_left = 4.72626
offset_top = 5.15755
offset_right = 230.726
offset_bottom = 51.1575
scale = Vector2(0.130061, 0.130061)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_gkrgk")
theme_override_font_sizes/font_size = 40
text = "YOU DIED!"
horizontal_alignment = 1

[node name="TileMapLayer" type="TileMapLayer" parent="CanvasLayer/Panel"]
z_index = 1
position = Vector2(-27.842, -7.97808)
scale = Vector2(0.0859321, 0.0805867)
tile_map_data = PackedByteArray("AAAUAAcAAAAAAAEAAAAUAAgAAAAAAAEAAAAUAAkAAAAAAAEAAAAUAAoAAAAAAAEAAAAUAAsAAAAAAAEAAAAUAAwAAAAAAAEAAAAUAA0AAAAAAAEAAAAUAA4AAAAAAAEAAAAUAA8AAAAAAAEAAAAUABAAAAAAAAEAAAAUABEAAAAAAAEAAAAUABIAAAAAAAEAAAAUABMAAAAAAAEAAAAUABQAAAAAAAEAAAAUABUAAAAAAAEAAAAUABYAAAAAAAEAAAAUABcAAAAAAAEAAAAUAAYAAAAAAAAAAAAVAAYAAAABAAAAAAAWAAYAAAABAAAAAAAXAAYAAAABAAAAAAAYAAYAAAABAAAAAAAZAAYAAAABAAAAAAAaAAYAAAABAAAAAAAbAAYAAAABAAAAAAAcAAYAAAABAAAAAAAdAAYAAAABAAAAAAAeAAYAAAABAAAAAAAfAAYAAAABAAAAAAAgAAYAAAABAAAAAAAhAAYAAAABAAAAAAAiAAYAAAABAAAAAAAjAAYAAAABAAAAAAAkAAYAAAABAAAAAAAlAAYAAAABAAAAAAAmAAYAAAABAAAAAAAnAAYAAAABAAAAAAAoAAYAAAABAAAAAAApAAYAAAABAAAAAAAqAAYAAAABAAAAAAArAAYAAAABAAAAAAAsAAYAAAABAAAAAAAtAAYAAAABAAAAAAAuAAYAAAABAAAAAAAvAAYAAAABAAAAAAAwAAYAAAALAAAAAAAwAAcAAAALAAEAAAAwAAgAAAALAAEAAAAwAAkAAAALAAEAAAAwAAoAAAALAAEAAAAwAAsAAAALAAEAAAAwAAwAAAALAAEAAAAwAA0AAAALAAEAAAAwAA4AAAALAAEAAAAwAA8AAAALAAEAAAAwABAAAAALAAEAAAAwABEAAAALAAEAAAAwABIAAAALAAEAAAAwABMAAAALAAEAAAAwABQAAAALAAEAAAAwABUAAAALAAEAAAAwABYAAAALAAEAAAAwABcAAAALAAEAAAAwABgAAAALAAEAAAAwABkAAAALAAEAAAAwABoAAAALAAEAAAAwABsAAAALAAEAAAAwABwAAAALAAEAAAAwAB0AAAALAAEAAAAwAB4AAAALAAEAAAAwAB8AAAALAAEAAAAwACAAAAALAAEAAAAwACEAAAALAAEAAAAwACIAAAALAAEAAAAwACMAAAALAAEAAAAvAAcAAAAKAAEAAAAvAAgAAAAKAAEAAAAvAAkAAAAKAAEAAAAvAAoAAAAKAAEAAAAvAAsAAAAKAAEAAAAvAAwAAAAKAAEAAAAvAA0AAAAKAAEAAAAvAA4AAAAKAAEAAAAvAA8AAAAKAAEAAAAvABAAAAAKAAEAAAAvABEAAAAKAAEAAAAvABIAAAAKAAEAAAAvABMAAAAKAAEAAAAvABQAAAAKAAEAAAAvABUAAAAKAAEAAAAvABYAAAAKAAEAAAAvABcAAAAKAAEAAAAvABgAAAAKAAEAAAAvABkAAAAKAAEAAAAvABoAAAAKAAEAAAAvABsAAAAKAAEAAAAvABwAAAAKAAEAAAAvAB0AAAAKAAEAAAAvAB4AAAAKAAEAAAAvAB8AAAAKAAEAAAAvACAAAAAKAAEAAAAvACEAAAAKAAEAAAAvACIAAAAKAAEAAAAvACMAAAAKAAEAAAAwACQAAAALAAMAAAAvACQAAAAJAAMAAAAuACQAAAAJAAMAAAAtACQAAAAJAAMAAAAsACQAAAAJAAMAAAArACQAAAAJAAMAAAAqACQAAAAJAAMAAAApACQAAAAJAAMAAAAoACQAAAAJAAMAAAAnACQAAAAJAAMAAAAmACQAAAAJAAMAAAAlACQAAAAJAAMAAAAkACQAAAAJAAMAAAAjACQAAAAJAAMAAAAiACQAAAAJAAMAAAAhACQAAAAJAAMAAAAgACQAAAAJAAMAAAAfACQAAAAJAAMAAAAeACQAAAAJAAMAAAAdACQAAAAJAAMAAAAcACQAAAAJAAMAAAAbACQAAAAJAAMAAAAaACQAAAAJAAMAAAAZACQAAAAJAAMAAAAYACQAAAAJAAMAAAAXACQAAAAJAAMAAAAWACQAAAAJAAMAAAAVACQAAAAJAAMAAAAUACQAAAAAAAMAAAAUABgAAAAAAAEAAAAUABkAAAAAAAEAAAAUABoAAAAAAAEAAAAUABsAAAAAAAEAAAAUABwAAAAAAAEAAAAUAB0AAAAAAAEAAAAUAB4AAAAAAAEAAAAUAB8AAAAAAAEAAAAUACAAAAAAAAEAAAAUACEAAAAAAAEAAAAUACIAAAAAAAEAAAAUACMAAAAAAAEAAAAuACMAAAADAAIAAAAtACMAAAADAAIAAAAsACMAAAADAAIAAAArACMAAAADAAIAAAAqACMAAAADAAIAAAApACMAAAADAAIAAAAoACMAAAADAAIAAAAnACMAAAADAAIAAAAmACMAAAADAAIAAAAlACMAAAADAAIAAAAkACMAAAADAAIAAAAjACMAAAADAAIAAAAiACMAAAADAAIAAAAhACMAAAADAAIAAAAgACMAAAADAAIAAAAfACMAAAADAAIAAAAeACMAAAADAAIAAAAdACMAAAADAAIAAAAcACMAAAADAAIAAAAbACMAAAADAAIAAAAaACMAAAADAAIAAAAZACMAAAADAAIAAAAYACMAAAADAAIAAAAXACMAAAADAAIAAAAWACMAAAADAAIAAAAVACMAAAADAAIAAAA=")
tile_set = SubResource("TileSet_5igi7")
